# OmSU_1_course

./: .gitignore  CMakeLists.txt  README.md
Bakhta/individual_homework/: ihw_1.cpp
Bakhta/individual_homework/ihw_1_1/src/: CMakeLists.txt  ihw_1.cpp
Bakhta/individual_homework/ihw_1_2/: ihw_2.cpp
Bakhta/individual_homework/ihw_1_2/src/: CMakeLists.txt
Bakhta/individual_homework/ihw_2_1/seqres/: CMakeLists.txt  analyzer.cpp  analyzer.h  main.cpp
Bakhta/individual_homework/ihw_2_1/test/: CMakeLists.txt  main.cpp  tester.cpp  tester.h
Bakhta/individual_homework/ihw_2_1/test/cmake/: FindSeqRes.cmake
Bakhta/individual_homework/ihw_2_2/include/: cli.h  constants.h  matrix.h  utils.h
Bakhta/individual_homework/ihw_2_2/res/: input.txt  output.txt
Bakhta/individual_homework/ihw_2_2/src/: CMakeLists.txt  cli.cpp  input.txt  main.cpp  matrix.cpp  utils.cpp
Bakhta/individual_homework/ihw_2_3/include/: constants.h  stack.h  test.h
Bakhta/individual_homework/ihw_2_3/src/: CMakeLists.txt  main.cpp  stack.cpp  test.cpp
Bakhta/individual_homework/ihw_2_3/test/: 1.txt  1_answer.txt  2_a.txt
Bakhta/labs/: 4_1.cpp  4_4.cpp
Bakhta/labs/src/: 4_2.cpp  4_4.cpp  4_5.cpp  CMakeLists.txt
Bakhta/seminars/seminar_10/src/: main.cpp
Bakhta/seminars/seminar_11/include/: deque.h  errors.h  queue.h
Bakhta/seminars/seminar_11/src/: deque.cpp  main.cpp  matrix.cpp  queue.cpp
Bakhta/seminars/seminar_9/include/: constants.h
Bakhta/seminars/seminar_9/src/: main.cpp
exam/ADT/arrays/include/: deque.h  queue.h  stack.h
exam/ADT/arrays/src/: CMakeLists.txt  deque.cpp  main.cpp  queue.cpp  stack.cpp
exam/ADT/lists/include/: deque.h  l1_list.h  queue.h  stack.h
exam/ADT/lists/src/: CMakeLists.txt  deque.cpp  main.cpp  (+3 more)
exam/answers/src/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt
exam/sorts/src/: CMakeLists.txt  input.txt  main.cpp
include/: constants.h  matrix.h
src/: CMakeLists.txt  main.cpp  matrix.cpp
